force-app/main/default/objects/KimbleOne__Proposition__c/KimbleOne__Proposition__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Proposition</label>
    <nameField>
        <label>Proposition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propositions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>