force-app/main/default/objects/KimbleOne__Proposition__c/fields/KimbleOne__DefaultForecastAtDetailedLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultForecastAtDetailedLevel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Forecast At Detailed Level</label>
    <type>Checkbox</type>
</CustomField>