force-app/main/default/objects/KimbleOne__Proposition__c/fields/KimbleOne__Description__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>