force-app/main/default/objects/KimbleOne__Proposition__c/fields/KimbleOne__IsRestricted__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsRestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restricted?</label>
    <type>Checkbox</type>
</CustomField>