force-app/main/default/objects/KimbleOne__Proposition__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Description__c</columns>
    <columns>KimbleOne__DefaultForecastAtDetailedLevel__c</columns>
    <columns>KimbleOne__IsRestricted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>